[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["bricked", "guffo"]
description = ""
name = "repl_python3_GuffoBot"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^2.0.2"
python = "^3.8"
replit = "^3.2.4"
discord = "^1.7.3"
disnake = "^2.3.0"
db = "^0.1.1"
bs4 = "^0.0.1"
[tool.poetry.dev-dependencies]
